# tract_data

./: .gitignore  census_data.py  census_variables.csv  config.json  fa_data.py  map_utils.py  pyproject.toml  requirements.txt  secondharvestmap.py  shnwnc_transit_tool.py  transit.py  utils.py
.devcontainer/: devcontainer.json
data/: 2023acs5_vehicles_by_household_size.csv  FeedingAmerica19-22NC.xlsx  Household_size_by_vehicles_available.csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE.csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(AMERICAN_INDIAN_AND_ALASKA_NATIVE_ALONE).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(ASIAN_ALONE).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(BLACK_OR_AFRICAN_AMERICAN_ALONE).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(HISPANIC_OR_LATINO).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(NATIVE_HAWAIIAN_AND_OTHER_PACIFIC_ISLANDER_ALONE).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(SOME_OTHER_RACE_ALONE).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(TWO_OR_MORE_RACES).csv  POVERTY_STATUS_IN_THE_PAST_12_MONTHS_BY_AGE_(WHITE_ALONE,_NOT_HISPANIC_OR_LATINO).csv  PUBLIC_ASSISTANCE_INCOME_OR_FOOD_STAMPS_or_SNAP_IN_THE_PAST_12_MONTHS_FOR_HOUSEHOLDS.csv  census_data.py  census_variables.csv  city_coords.csv  counties.csv  county_seats.csv  fa_data.py  food_insecurity.csv  full_acs_data.csv  full_acs_data.pkl  poverty.csv  shnwnc_facilities.csv  tract_data.csv  tracts_new.pkl  vehicle.csv
tests/: test_map_utils.py  test_utils.py
