[project]
name = "tract-data"
version = "0.1.0"
description = "Census-tract level needs map for SHNWNC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "census>=0.8.23",
    "geopandas>=1.0.1",
    "googlemaps>=4.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
]
